Preserve precision of latitude and longitude.
- Noticed that precision of latitude and longitudes are gone after storing it into the database. Fixed it by saving all columns as TEXT type and retrieving them with their own data-types(double/float)

- Added more comments so that project is more readable.

- Request IDs of the geofences are stored into the databases and they may help to remove geofences.

-Other small changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="confirm_dialog_activity_address">Address</string>
     <string name="confirm_dialog_activity_button_confirm">Confirm</string>
     <string name="confirm_dialog_activity_button_cancel">Cancel</string>
+    <string name="action_mode_remove">Remove</string>
 </resources>
